--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <div class="result-container" id="result">
             <h2>RESULT</h2>
 
-            <h3 class="alias" id="al"></h3>
-            <h2 class="name" id="al"></h2>
+            <h3 class="alias" id="alias"></h3>
+            <h4 class="name" id="name"></h4>
             <p class="bio" id="al"></p>
 
         </div>
